[tool.poetry]
name = "pension"
version = "0.1.0"
description = ""
authors = ["NodleKang <nodlekang@gmail.com>"]
readme = "README.md"
packages = [{include = "pension", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gspread = "^6.0.2"
finance-datareader = "^0.9.90"
oauth2client = "^4.1.3"
pyopenssl = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
