[tool.poetry]
name = "pension"
version = "0.1.0"
description = ""
authors = ["NodleKang <nodlekang@gmail.com>"]
readme = "README.md"
packages = [{include = "pension", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gspread = "^6.0.2"
finance-datareader = "^0.9.90"
oauth2client = "^4.1.3"
pyopenssl = "^24.1.0"
pyyaml = "^6.0.1"
streamlit = "^1.32.2"
plotly = "^5.20.0"
streamlit-option-menu = "^0.3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
